--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -131,6 +131,15 @@
       ]
     },
     {
+      "login": "",
+      "name": "Irazema Fuentes-Bueno",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
       "login": "cropgen",
       "name": "narinder singh",
       "avatar_url": "https://avatars.githubusercontent.com/u/7772391?v=4",
@@ -143,7 +152,106 @@
       "login": "singhdj2",
       "name": "Daljit Singh",
       "avatar_url": "https://avatars.githubusercontent.com/u/7775048?v=4",
-      "profile": "http://www.wheatgenetics.org",
+      "profile": "https://github.com/singhdj2",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "sdunckel",
+      "name": "Sandra Dunckel",
+      "avatar_url": "https://avatars.githubusercontent.com/u/4632324?v=4",
+      "profile": "https://github.com/sdunckel",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Shuangye Wu",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Erena Edae",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Tatiana Danilova",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Rodrigo Pedrozo",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Cristiano Lemes da Silva",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Sophie Bouchet",
+      "avatar_url": "",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "hiroiw",
+      "name": "Hiroyoshi Iwata",
+      "avatar_url": "https://avatars.githubusercontent.com/u/17869371?v=4",
+      "profile": "https://github.com/hiroiw",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Goro Ishikawa",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Mokhlesur Rahman",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
+      "contributions": [
+        "translation"
+      ]
+    },
+    {
+      "login": "",
+      "name": "Alice Brunazzi",
+      "avatar_url": "https://raw.githubusercontent.com/PhenoApps/Field-Book/master/.github/blank-profile.png",
+      "profile": "",
       "contributions": [
         "translation"
       ]
