Update build variants Update strings

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,10 @@ android {
                 }
             }
         }
+
+        debug {
+            debuggable true
+        }
     }
 
     compileOptions {
