--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,7 +94,7 @@ dependencies {
     
     implementation "androidx.core:core-ktx:1.3.1"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.30"
     testImplementation 'junit:junit:4.13.1'
 }
 
