--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,8 +12,8 @@ android {
         applicationId "com.fieldbook.tracker"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode = 450
-        versionName = '4.5'
+        versionCode = 490
+        versionName = '5.0'
         multiDexEnabled true
     }
 
@@ -61,7 +61,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
@@ -69,15 +69,14 @@ dependencies {
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.core:core-ktx:1.3.2"
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'com.android.volley:volley:1.1.1'
+    implementation 'com.android.volley:volley:1.2.0'
     implementation 'com.google.android.material:material:1.3.0'
     implementation 'com.google.android:flexbox:2.0.1'
-    implementation 'com.google.firebase:firebase-analytics:18.0.2'
-    implementation 'com.google.firebase:firebase-crashlytics:17.3.1'
-    implementation 'com.google.zxing:core:3.3.0'
+    implementation 'com.google.firebase:firebase-analytics:18.0.3'
+    implementation 'com.google.firebase:firebase-crashlytics:17.4.1'
+    implementation 'com.google.zxing:core:3.3.3'
 
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.20"
-    implementation 'org.phenoapps:javalib:1.0.5'
+    implementation 'org.phenoapps:phenolib:0.9.23'
     implementation 'org.jsoup:jsoup:1.8.1'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
     implementation 'pub.devrel:easypermissions:3.0.0'
@@ -94,16 +93,15 @@ dependencies {
     implementation "org.brapi:brapi-java-client:2.0-SNAPSHOT"
     implementation 'net.openid:appauth:0.8.0'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava' //google messed up some packages, this package is temporary until the issue is fixed (Feb 2021)
+    
+    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31"
 
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
-    
-    implementation "androidx.core:core-ktx:1.3.1"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.30"
-    testImplementation 'junit:junit:4.13.1'
-    implementation "androidx.core:core-ktx:1.3.1"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.20"
+    testImplementation 'junit:junit:4.13.2'
+
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 }
 
