--- a/build.gradle
+++ b/build.gradle
@@ -6,10 +6,10 @@ buildscript {
     }
 
     dependencies {
-        classpath 'com.android.tools.build:gradle:4.1.2'
+        classpath 'com.android.tools.build:gradle:4.1.3'
         classpath 'com.google.gms:google-services:4.3.5'
-        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.4.1'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.20"
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.5.2'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.4.32"
     }
 }
 
@@ -17,8 +17,15 @@ allprojects {
     repositories {
         jcenter()
         google()
-        maven { url "https://dl.bintray.com/pheno-apps/pheno-apps-java-client-library" }
         maven { url "https://jitpack.io" }
+
+        maven {
+            url = "https://maven.pkg.github.com/phenoapps/phenolib"
+            credentials {
+                username = getLocalProp("GITHUB_USERNAME")
+                password = getLocalProp("GITHUB_TOKEN")
+            }
+        }
 
         maven {
             url = "https://maven.pkg.github.com/Breeding-Insight/brapi"
