--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,7 +82,8 @@ dependencies {
     implementation 'pub.devrel:easypermissions:3.0.0'
     implementation('com.journeyapps:zxing-android-embedded:3.6.0') { transitive = false }
     implementation 'com.h6ah4i.android.preference:numberpickerprefcompat:1.0.0'
-    implementation 'com.github.MFlisar:changelog:1.1.7'
+    //noinspection GradleDependency
+    implementation 'com.github.MFlisar:changelog:1.1.6'
     implementation 'com.github.daniel-stoneuk:material-about-library:2.4.2'
     //noinspection GradleDependency
     implementation "com.mikepenz:aboutlibraries:6.2.3"
