Added signing config

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,9 @@ proguard/
 .github/*
 !.github/ISSUE_TEMPLATE/
 !.github/PULL_REQUEST_TEMPLATE.md
+
+# Keystore files
+# Uncomment the following lines if you do not want to check your keystore files in.
+*.jks
+*.keystore
+keystore.config
