Updated gradle Added signingConfig Update readme closes #245

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,10 +1,6 @@
-#Wed Feb 10 00:34:34 CST 2021
+#Wed May 05 18:29:33 CDT 2021
 distributionBase=GRADLE_USER_HOME
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.7.1-bin.zip
 distributionPath=wrapper/dists
-zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-<<<<<<< HEAD
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
-=======
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-bin.zip
->>>>>>> develop
+zipStoreBase=GRADLE_USER_HOME
