--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,7 +12,7 @@ android {
             keyAlias keystoreProps['keyAlias']
             keyPassword keystoreProps['keyPassword']
             storePassword keystoreProps['storePassword']
-            storeFile file('keystore.keystore.jks')
+            storeFile file('keystore.keystore')
         }
     }
 
@@ -92,7 +92,7 @@ dependencies {
     implementation 'com.github.daniel-stoneuk:material-about-library:2.4.2'
     //noinspection GradleDependency
     implementation "com.mikepenz:aboutlibraries:6.2.3"
-    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.0'
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.2'
     implementation 'com.github.ByteHamster:SearchPreference:v2.0.0'
     implementation "com.github.skydoves:colorpickerpreference:2.0.4"
 
@@ -102,7 +102,6 @@ dependencies {
     
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
-    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:1.4.31"
 
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
