added TableView https://github.com/evrencoskun/TableView/wiki for data grid (they haven't updated from jcenter so it's all from source)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         android:smallScreens="true"
         android:xlargeScreens="true" />
 
+    <!-- this tools:replace is required for tableview -->
     <application
         android:name="androidx.multidex.MultiDexApplication"
         android:hardwareAccelerated="true"
@@ -35,6 +36,7 @@
         android:largeHeap="true"
         android:requestLegacyExternalStorage="true"
         android:usesCleartextTraffic="true"
+        tools:replace="android:label"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".activities.ConfigActivity"
