--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,15 @@ apply plugin: 'com.google.firebase.crashlytics'
 
 android {
     signingConfigs {
-        playStoreConfig {
-            Properties keystoreProps = new Properties()
-            keystoreProps.load(new FileInputStream(file('keystore.config')))
-
-            keyAlias keystoreProps['keyAlias']
-            keyPassword keystoreProps['keyPassword']
-            storePassword keystoreProps['storePassword']
-            storeFile file('keystore.keystore')
-        }
+//        playStoreConfig {
+//            Properties keystoreProps = new Properties()
+//            keystoreProps.load(new FileInputStream(file('keystore.config')))
+//
+//            keyAlias keystoreProps['keyAlias']
+//            keyPassword keystoreProps['keyPassword']
+//            storePassword keystoreProps['storePassword']
+//            storeFile file('keystore.keystore')
+//        }
     }
 
     compileSdkVersion 29
@@ -33,7 +33,7 @@ android {
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
-            signingConfig signingConfigs.playStoreConfig //Add your own signing config
+//            signingConfig signingConfigs.playStoreConfig //Add your own signing config
         }
 
         debug {
@@ -71,7 +71,7 @@ android {
 dependencies {
     implementation 'androidx.appcompat:appcompat:1.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    implementation 'androidx.recyclerview:recyclerview:1.2.0'
+    implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
     implementation 'androidx.exifinterface:exifinterface:1.3.2'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
@@ -107,6 +107,8 @@ dependencies {
     
     implementation "androidx.core:core-ktx:1.3.2"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+
+    implementation project(path: ':table')
 
     kapt 'com.android.databinding:compiler:3.1.4'
 
