--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,17 +6,13 @@ apply plugin: 'com.google.firebase.crashlytics'
 android {
     signingConfigs {
         playStoreConfig {
-            def propsFile = rootProject.file('keystore.config')
-            def configName = 'release'
+            Properties keystoreProps = new Properties()
+            keystoreProps.load(new FileInputStream(file('keystore.config')))
 
-            if (propsFile.exists() && android.signingConfigs.hasProperty(configName)) {
-                def props = new Properties()
-                props.load(new FileInputStream(propsFile))
-                android.signingConfigs[configName].storeFile = file(props['keystore.keystore'])
-                android.signingConfigs[configName].storePassword = props['storePassword']
-                android.signingConfigs[configName].keyAlias = props['keyAlias']
-                android.signingConfigs[configName].keyPassword = props['keyPassword']
-            }
+            keyAlias keystoreProps['keyAlias']
+            keyPassword keystoreProps['keyPassword']
+            storePassword keystoreProps['storePassword']
+            storeFile file('keystore.keystore')
         }
     }
 
@@ -101,7 +97,7 @@ dependencies {
     implementation "com.github.skydoves:colorpickerpreference:2.0.4"
 
     implementation "org.brapi:brapi-java-client:2.0-SNAPSHOT"
-    implementation 'net.openid:appauth:0.8.0'
+    implementation 'net.openid:appauth:0.9.0'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava' //google messed up some packages, this package is temporary until the issue is fixed (Feb 2021)
     
     implementation "androidx.core:core-ktx:1.3.2"
