--- a/app/build.gradle
+++ b/app/build.gradle
@@ -71,7 +71,7 @@ android {
 }
 
 dependencies {
-    implementation 'androidx.appcompat:appcompat:1.2.0'
+    implementation 'androidx.appcompat:appcompat:1.3.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
@@ -79,13 +79,14 @@ dependencies {
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation "androidx.preference:preference:1.1.1"
     implementation 'androidx.multidex:multidex:2.0.1'
-    implementation "androidx.core:core-ktx:1.3.2"
+    implementation "androidx.core:core-ktx:1.6.0"
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'com.android.volley:volley:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'com.google.android:flexbox:2.0.1'
-    implementation 'com.google.firebase:firebase-analytics:18.0.3'
-    implementation 'com.google.firebase:firebase-crashlytics:17.4.1'
+    implementation 'com.google.android.material:material:1.4.0'
+    implementation 'com.google.android.flexbox:flexbox:3.0.0'
+    implementation 'com.google.firebase:firebase-analytics:19.0.0'
+    implementation 'com.google.firebase:firebase-crashlytics:18.1.0'
+
     implementation 'com.google.zxing:core:3.3.3'
 
     implementation 'org.phenoapps:phenolib:0.9.23'
@@ -107,14 +108,14 @@ dependencies {
     implementation 'net.openid:appauth:0.9.0'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava' //google messed up some packages, this package is temporary until the issue is fixed (Feb 2021)
     
-    implementation "androidx.core:core-ktx:1.3.2"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1"
+    implementation "androidx.core:core-ktx:1.6.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
 
     implementation project(path: ':table')
 
     kapt 'com.android.databinding:compiler:3.1.4'
 
-    testImplementation 'androidx.test:core:1.3.0'
+    testImplementation 'androidx.test:core:1.4.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
     testImplementation 'junit:junit:4.13.2'
 
