--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,14 +32,18 @@ android {
     }
 
     buildTypes {
-        debug {
-            debuggable true
-        }
 
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
             signingConfig signingConfigs.playStoreConfig //Add your own signing config
+        }
+
+        debug {
+            clean
+            debuggable true
+            manifestPlaceholders = [crashlyticsCollectionEnabled: "false"]
+            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
 
