--- a/app/build.gradle
+++ b/app/build.gradle
@@ -76,6 +76,8 @@ android {
 
 dependencies {
 
+    implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.3'
+
     //kotlin coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.1'
     //jetbrains
@@ -127,12 +129,9 @@ dependencies {
 
     testImplementation 'androidx.test:core:1.4.0'
     // Ktor
-    implementation "io.ktor:ktor-client-android:1.3.2"
-    implementation "io.ktor:ktor-client-cio:1.3.2"
-    implementation "io.ktor:ktor-client-serialization-jvm:1.3.2"
-    implementation "io.ktor:ktor-client-gson:1.3.2"
-    implementation "io.ktor:ktor-client-auth-basic-jvm:1.3.2"
-    implementation "io.ktor:ktor-client-auth-jvm:1.3.2"
+    implementation "io.ktor:ktor-client-core:1.5.2"
+    implementation "io.ktor:ktor-client-cio:1.5.2"
+    implementation "io.ktor:ktor-client-gson:1.5.2"
 
     testImplementation 'androidx.test:core:1.3.0'
     testImplementation 'org.robolectric:robolectric:4.3.1'
