init cropontology trait import commit new trait search activity navigate from the trait editor toolbar wait for 10s or so (watch the log until a few pages load, later I will add a progress bar or some type of ui) once you see the pages load, you can search text in the edit text these are the indices currently:
ontologyName
scaleName
methodName
institution
scientist
crop
description
methodClass
traitName
traitClass
traitDescription
entity
attribute

once you click on an item it will import it into FB

right now only cropontology Numerical, Ordinal and Nominal traits can be imported into FB numeric and categorical respectively, otherwise it will default to text.

Right now only the first two pages are loaded.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -168,6 +168,9 @@
             android:stateNotNeeded="true"
             tools:replace="android:screenOrientation" />
 
+        <activity android:name=".activities.CropontologyActivity"
+            android:theme="@style/AppTheme"/>
+
         <provider
             android:name=".provider.GenericFileProvider"
             android:authorities="com.fieldbook.tracker.fileprovider"
