--- a/app/build.gradle
+++ b/app/build.gradle
@@ -19,13 +19,13 @@ android {
         }
     }
 
-    compileSdkVersion 29
+    compileSdkVersion 30
     buildToolsVersion '29.0.3'
 
     defaultConfig {
         applicationId "com.fieldbook.tracker"
         minSdkVersion 16
-        targetSdkVersion 29
+        targetSdkVersion 30
         versionCode = 502
         versionName = '5.0.2'
         multiDexEnabled true
@@ -33,6 +33,7 @@ android {
 
     buildTypes {
         debug {
+            manifestPlaceholders = [crashlyticsCollectionEnabled: "false"]
             debuggable true
         }
 
@@ -110,6 +111,22 @@ dependencies {
     
     implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
+
+    //ktor
+    implementation "io.ktor:ktor-client-core:1.5.2"
+    implementation "io.ktor:ktor-client-cio:1.5.2"
+    implementation "io.ktor:ktor-client-gson:1.5.2"
+
+    def room_lifecycle_version = "2.2.5"
+    def room_version = "2.3.0"
+
+    //room
+    kapt "androidx.room:room-compiler:$room_version"
+    implementation "androidx.room:room-ktx:$room_lifecycle_version"
+    implementation "androidx.room:room-runtime:$room_version"
+
+    //livedata
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.4.0-alpha03"
 
     implementation project(path: ':table')
 
