--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,8 +26,8 @@ android {
         applicationId "com.fieldbook.tracker"
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode = 502
-        versionName = '5.0.2'
+        versionCode = 503
+        versionName = '5.0.3'
         multiDexEnabled true
     }
 
@@ -74,18 +74,18 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'androidx.exifinterface:exifinterface:1.3.2'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.0'
+    implementation 'androidx.exifinterface:exifinterface:1.3.3'
     implementation "androidx.legacy:legacy-preference-v14:1.0.0"
     implementation "androidx.preference:preference:1.1.1"
     implementation 'androidx.multidex:multidex:2.0.1'
     implementation "androidx.core:core-ktx:1.6.0"
     implementation 'com.android.support.constraint:constraint-layout:2.0.4'
-    implementation 'com.android.volley:volley:1.2.0'
+    implementation 'com.android.volley:volley:1.2.1'
     implementation 'com.google.android.material:material:1.4.0'
     implementation 'com.google.android.flexbox:flexbox:3.0.0'
-    implementation 'com.google.firebase:firebase-analytics:19.0.0'
-    implementation 'com.google.firebase:firebase-crashlytics:18.2.0'
+    implementation 'com.google.firebase:firebase-analytics:19.0.1'
+    implementation 'com.google.firebase:firebase-crashlytics:18.2.1'
 
     implementation 'com.google.zxing:core:3.3.3'
 
@@ -125,6 +125,7 @@ dependencies {
 repositories {
     mavenCentral()
 }
-task prepareKotlinBuildScriptModel {
-}
+
+task prepareKotlinBuildScriptModel {}
+
 android.defaultConfig.manifestPlaceholders = ['appAuthRedirectScheme': 'fieldbook' ]
