--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,8 @@ android {
 
     buildTypes {
         debug {
+            manifestPlaceholders = [crashlyticsCollectionEnabled: "false"]
+
             debuggable true
         }
 
@@ -71,6 +73,13 @@ android {
 }
 
 dependencies {
+
+    //add zebra jar file to dependencies
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
+    //zebra dependency
+    implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
+
     implementation 'androidx.appcompat:appcompat:1.3.1'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
