--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,7 +20,6 @@ android {
     }
 
     compileSdkVersion 29
-    buildToolsVersion '29.0.3'
 
     defaultConfig {
         applicationId "com.fieldbook.tracker"
@@ -100,7 +99,11 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.3.3'
 
-    implementation 'org.phenoapps:phenolib:0.9.23'
+    implementation 'com.github.phenoapps:phenolib:0.9.25'
+    //implementation 'com.github.breeding-insight:brapi:v0.1.0'
+
+    implementation "org.brapi:brapi-java-client:2.0.1"
+
     implementation 'org.jsoup:jsoup:1.8.1'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
     implementation 'pub.devrel:easypermissions:3.0.0'
@@ -115,7 +118,7 @@ dependencies {
     implementation 'com.github.ByteHamster:SearchPreference:v2.0.0'
     implementation "com.github.skydoves:colorpickerpreference:2.0.4"
 
-    implementation "org.brapi:brapi-java-client:2.0.1"
+
     implementation 'net.openid:appauth:0.9.0'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava' //google messed up some packages, this package is temporary until the issue is fixed (Feb 2021)
     
