--- a/app/build.gradle
+++ b/app/build.gradle
@@ -117,15 +117,13 @@ dependencies {
     implementation 'com.getkeepsafe.taptargetview:taptargetview:1.13.2'
     implementation 'com.github.ByteHamster:SearchPreference:v2.0.0'
     implementation "com.github.skydoves:colorpickerpreference:2.0.4"
-
+    implementation 'com.github.evrencoskun:TableView:v0.8.9.4'
 
     implementation 'net.openid:appauth:0.9.0'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava' //google messed up some packages, this package is temporary until the issue is fixed (Feb 2021)
     
     implementation "androidx.core:core-ktx:1.6.0"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
-
-    implementation project(path: ':table')
 
     kapt 'com.android.databinding:compiler:3.1.4'
 
