Changed collect activity geo nav snack bar messages to be high contrast. GeoNav log: Now prints unique id. Fixed gps updates and iz log race condition Change column order to show start lat/long first and plot parameters (primary/secondary/unique) last Added third state to closest (look at documentation for more detail) Added trapezoid method Added separate preferences page for geonav removed triangle method

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -122,6 +122,8 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
 
+    implementation 'math.geom2d:javaGeom:0.11.1'
+
     kapt 'com.android.databinding:compiler:3.1.4'
 
     testImplementation 'androidx.test:core:1.4.0'
