--- a/.gitignore
+++ b/.gitignore
@@ -55,6 +55,7 @@ proguard/
 .github/*
 !.github/ISSUE_TEMPLATE/
 !.github/PULL_REQUEST_TEMPLATE.md
+!.github/workflows/
 
 # Keystore files
 # Uncomment the following lines if you do not want to check your keystore files in.
