--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,12 +27,15 @@ on:
       - features/brapi_chunked_export
 
 jobs:
-  build:
-
+  test:
     runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v2
+      - name: setup java
+        uses: actions/setup-java@v1.4.3
+        with:
+          java-version: 8
       - name: Make gradlew executable
         run: chmod +x ./gradlew
       - name: Build with Gradle
