Updating path to reports

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -45,4 +45,4 @@ jobs:
         if: always()
         with:
           name: field-book-test-results-${{ github.run_number }}
-          path: ${{ github.workspace }}/reports/tests/*
+          path: ${{ github.workspace }}/app/build/reports/tests/*
