--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-kapt'
 apply plugin: 'com.google.gms.google-services'
 apply plugin: 'com.google.firebase.crashlytics'
+apply plugin: 'androidx.navigation.safeargs'
 
 android {
     signingConfigs {
@@ -19,12 +20,12 @@ android {
         }
     }
 
-    compileSdkVersion 29
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.fieldbook.tracker"
         minSdkVersion 21
-        targetSdkVersion 29
+        targetSdkVersion 31
         versionCode = 510
         versionName = '5.1.0'
         multiDexEnabled true
@@ -123,6 +124,12 @@ dependencies {
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
 
     implementation 'math.geom2d:javaGeom:0.11.1'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.4.1'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.4.1'
+    implementation "androidx.navigation:navigation-dynamic-features-fragment:2.4.1"
+    implementation "androidx.navigation:navigation-runtime-ktx:2.4.1"
+
+    implementation 'androidx.documentfile:documentfile:1.0.1'
 
     kapt 'com.android.databinding:compiler:3.1.4'
 
