--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,8 @@ buildscript {
         classpath 'com.google.gms:google-services:4.3.10'
         classpath 'com.google.firebase:firebase-crashlytics-gradle:2.7.1'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
+
     }
 }
 
@@ -19,10 +21,4 @@ allprojects {
         google()
         maven { url "https://jitpack.io" }
     }
-}
-
-static def getLocalProp(key) {
-    def Properties props = new Properties()
-    props.load(new FileInputStream(new File('local.properties')))
-    return props[key]
 }
