--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,7 +77,7 @@ android {
 dependencies {
 
     //add zebra jar file to dependencies
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation fileTree(include: ['*.jar', '*.aar'], dir: 'libs')
 
     //zebra dependency
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
@@ -100,8 +100,9 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.3.3'
 
-    implementation 'com.github.phenoapps:phenolib:v0.9.29'
+    implementation 'com.github.phenoapps:phenolib:v0.9.31'
     implementation 'com.github.breeding-insight:brapi:2.0.3'
+    implementation "com.squareup.okhttp:okhttp:2.7.5"
 
     implementation 'org.jsoup:jsoup:1.8.1'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
@@ -123,6 +124,7 @@ dependencies {
 
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
 
+    implementation "androidx.fragment:fragment-ktx:1.4.1"
     implementation 'math.geom2d:javaGeom:0.11.1'
     implementation 'androidx.navigation:navigation-fragment-ktx:2.4.2'
     implementation 'androidx.navigation:navigation-ui-ktx:2.4.2'
