Fixed brapi importer when no observation levels are present.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,9 +101,11 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.3.3'
 
-    implementation 'com.github.phenoapps:phenolib:v0.9.31'
+    implementation('com.github.phenoapps:phenolib:v0.9.31')
+
     implementation 'com.github.breeding-insight:brapi:2.0.3'
-    implementation "com.squareup.okhttp:okhttp:2.7.5"
+    implementation("com.squareup.okhttp3:okhttp:4.9.3")
+    implementation("com.squareup.okhttp3:logging-interceptor:4.9.3")
 
     implementation 'org.jsoup:jsoup:1.8.1'
     implementation 'net.sourceforge.jexcelapi:jxl:2.6.10'
