--- a/build.gradle
+++ b/build.gradle
@@ -20,5 +20,6 @@ allprojects {
         mavenCentral()
         google()
         maven { url "https://jitpack.io" }
+        maven { url 'https://raw.github.com/saki4510t/libcommon/master/repository/' }
     }
 }
