usb camera improvement

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -101,7 +101,13 @@ dependencies {
 
     implementation 'com.google.zxing:core:3.3.3'
 
-    implementation('com.github.phenoapps:phenolib:v0.9.38')
+    implementation('com.github.phenoapps:phenolib:v0.9.39')
+
+    //necessary when building phenolib locally
+    //implementation "com.squareup.okhttp:okhttp:2.7.5"
+
+//uvc camera java native libs
+    implementation("com.serenegiant:common:2.12.4")
 
     implementation 'com.github.breeding-insight:brapi:2.0.3'
     implementation("com.squareup.okhttp3:okhttp:4.9.3")
