--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,6 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+
     repositories {
         google()
         mavenCentral()
@@ -13,6 +14,10 @@ buildscript {
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:2.4.1"
 
     }
+}
+
+plugins {
+    id 'com.google.dagger.hilt.android' version '2.44' apply false
 }
 
 allprojects {
