--- a/build.gradle
+++ b/build.gradle
@@ -28,3 +28,12 @@ allprojects {
         maven { url 'https://raw.github.com/saki4510t/libcommon/master/repository/' }
     }
 }
+
+ext {
+    extTruthVersion = "1.5.0"
+    coreVersion = "1.5.0"
+    testRulesVersion = "1.5.0"
+    extJUnitVersion = "1.0.0"
+    runnerVersion = "1.5.2"
+    espressoVersion = "3.3.0"
+}
