--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -6,10 +6,58 @@ on:
 name: do-beta-release
 
 jobs:
-  update-version:
+  build:
+
+    runs-on: ubuntu-latest
+
+    steps:
     - name: Update Android Version Code
       uses: nathanmkaya/android-version-code-update@v0.1.3
-  build-apk:
-  upload-release:
-    - name: Upload Android Release to Play Store
+      with:
+        serviceAccountJson: ${{ SERVICE_ACCOUNT_JSON }}
+        packageName: com.fieldbook.tracker
+
+    - name: Decode Keystore
+      id: decode_keystore
+      uses: timheuer/base64-to-file@v1
+      with:
+        fileName: 'keystore/your_signing_keystore.jks'
+        encodedString: ${{ secrets.KEYSTORE }}
+
+    - name: Checkout the code
+    - uses: actions/checkout@v2
+
+    - name: Set up JDK 1.8
+      uses: actions/setup-java@v1
+      with:
+        java-version: 1.8
+
+    - name: Make gradlew executable
+      run: chmod +x ./gradlew
+
+    - name: Build prod
+      run: ./gradlew app:bundleRelease
+      env:
+        SIGNING_KEY_ALIAS: ${{ secrets.SIGNING_KEY_ALIAS }}
+        SIGNING_KEY_PASSWORD: ${{ secrets.SIGNING_KEY_PASSWORD }}
+        SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
+
+    - name: Upload build output
+      uses: actions/upload-artifact@v2
+      with:
+        name: Build Artifacts
+        path: app/build/outputs/
+
+    - name: Release to Play Store
       uses: r0adkll/upload-google-play@v1
+      with:
+        serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
+        packageName: com.example.MyApp
+        releaseFiles: app/build/outputs/bundle/release/app-release.aab
+        track: production
+        status: inProgress
+        inAppUpdatePriority: 2
+        userFraction: 0.33
+        whatsNewDirectory: distribution/whatsnew
+        mappingFile: app/build/outputs/mapping/release/mapping.txt
+        debugSymbols: app/intermediates/merged_native_libs/release/out/lib
