--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -25,7 +25,7 @@ jobs:
         encodedString: ${{ secrets.KEYSTORE }}
 
     - name: Checkout the code
-    - uses: actions/checkout@v2
+      uses: actions/checkout@v2
 
     - name: Set up JDK 1.8
       uses: actions/setup-java@v1
