--- a/.github/workflows/beta-release.yml
+++ b/.github/workflows/beta-release.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Update Android Version Code
       uses: nathanmkaya/android-version-code-update@v0.1.3
       with:
-        serviceAccountJson: ${{ SERVICE_ACCOUNT_JSON }}
+        serviceAccountJson: ${{ secrets.SERVICE_ACCOUNT_JSON }}
         packageName: com.fieldbook.tracker
 
     - name: Decode Keystore
@@ -48,16 +48,16 @@ jobs:
         name: Build Artifacts
         path: app/build/outputs/
 
-    - name: Release to Play Store
-      uses: r0adkll/upload-google-play@v1
-      with:
-        serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
-        packageName: com.example.MyApp
-        releaseFiles: app/build/outputs/bundle/release/app-release.aab
-        track: production
-        status: inProgress
-        inAppUpdatePriority: 2
-        userFraction: 0.33
-        whatsNewDirectory: distribution/whatsnew
-        mappingFile: app/build/outputs/mapping/release/mapping.txt
-        debugSymbols: app/intermediates/merged_native_libs/release/out/lib
+    # - name: Release to Play Store
+    #   uses: r0adkll/upload-google-play@v1
+    #   with:
+    #     serviceAccountJsonPlainText: ${{ SERVICE_ACCOUNT_JSON }}
+    #     packageName: com.example.MyApp
+    #     releaseFiles: app/build/outputs/bundle/release/app-release.aab
+    #     track: production
+    #     status: inProgress
+    #     inAppUpdatePriority: 2
+    #     userFraction: 0.33
+    #     whatsNewDirectory: distribution/whatsnew
+    #     mappingFile: app/build/outputs/mapping/release/mapping.txt
+    #     debugSymbols: app/intermediates/merged_native_libs/release/out/lib
