--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -11,11 +11,15 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - name: Update Android Version Code
-      uses: nathanmkaya/android-version-code-update@v0.1.3
+    - uses: actions/checkout@v2
+    - name: set up JDK 1.8
+      uses: actions/setup-java@v1
       with:
-        serviceAccountJson: ${{ secrets.SERVICE_ACCOUNT_JSON }}
-        packageName: com.fieldbook.tracker
+        java-version: 1.8
+    - name: Bump version
+      uses: chkfung/android-version-actions@v1.2.1
+      with:
+        gradlePath: app/build.gradle
 
     - name: Decode Keystore
       id: decode_keystore
@@ -23,14 +27,6 @@ jobs:
       with:
         fileName: 'keystore/your_signing_keystore.jks'
         encodedString: ${{ secrets.KEYSTORE }}
-
-    - name: Checkout the code
-      uses: actions/checkout@v2
-
-    - name: Set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
 
     - name: Make gradlew executable
       run: chmod +x ./gradlew
