--- a/.github/workflows/alpha-release.yml
+++ b/.github/workflows/alpha-release.yml
@@ -35,7 +35,7 @@ jobs:
       run: chmod +x ./gradlew
 
     - name: Build prod
-      run: ./gradlew app:bundleRelease
+      run: ./gradlew app:assembleRelease
       env:
         SIGNING_KEY_ALIAS: ${{ secrets.ALIAS }}
         SIGNING_KEY_PASSWORD: ${{ secrets.KEY_PASSWORD }}
