test alternative release action

--- a/.github/workflows/github-release.yml
+++ b/.github/workflows/github-release.yml
@@ -55,12 +55,23 @@ jobs:
         name: Build Artifacts
         path: app/build/outputs/
     
-    - name: Release APK
-      uses: svenstaro/upload-release-action@v2
+    - name: Create release
+      id: create_release
+      uses: actions/create-release@v1
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
-        asset_name: Field-Book-v${{ github.ref }}.apk
-        tag: ${{ github.ref }}
-        overwrite: true
+        tag_name: ${{ steps.bump_version.outputs.new_tag }}
+        release_name: ${{ steps.bump_version.outputs.new_tag }}
+        draft: false
+        prerelease: false
+
+    # - name: Release APK
+    #   uses: svenstaro/upload-release-action@v2
+    #   with:
+    #     repo_token: ${{ secrets.GITHUB_TOKEN }}
+    #     file: app/build/outputs/apk/release/app-release-unsigned-signed.apk
+    #     asset_name: Field-Book-v${{ steps.bump.outputs.VERSION }}.apk
+    #     tag: ${{ github.ref }}
+    #     overwrite: true
     
